--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.9.0",
     "@tailwindcss/vite": "^4.1.12",
     "axios": "^1.11.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.542.0",
     "motion": "^12.23.12",
     "ogl": "^1.0.11",
@@ -20,7 +21,7 @@
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.8.2",
+    "react-router-dom": "^7.9.1",
     "recharts": "^3.2.0",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0"
